<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/accent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_inside_title"
        style="@style/info_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/info_dialog_new_entry"
        android:textColor="@color/black" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/weight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dialog_inside_edit_weight_value"
                    style="@style/text_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/selector_edit_text"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:digits="1234567890."
                    android:text=""/>

                <Spinner
                    android:id="@+id/dialog_inside_spinner_weight_units"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:entries="@array/weight_units_short" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/data" />

            <TextView
                android:id="@+id/dialog_inside_date"
                style="@style/text_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_edit_text"
                android:text="2015-12-25 13:90" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_inside_button_done"
                style="@style/dialog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/dialog_inside_done" />

            <LinearLayout>
            <TextView
                android:id="@+id/dialog_inside_button_cancel"
                style="@style/dialog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_inside_canel" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>